# Mekatronikk-4-MEPA2002

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  compose.yml  frames_2026-03-04_15.52.58.gv
FusionExport3/Gazebo/: Gazebo.urdf
FusionExport3/Gazebo/meshes/: Camera.stl  Drive-L.stl  Drive-R.stl  IMU.stl  Lidar.stl  ML.stl  MR.stl  Midsection.stl  SLOTLBI.stl  SLOTLFI.stl  SLOTRBI.stl  SLOTRFI.stl  Stepper-1.stl  Unyaktig-batteri-mockup-v1.stl  WheelLT.stl  WheelRT.stl
arduino/mega_dfr0601_test/: mega_dfr0601_test.ino
arduino/mega_distansemåler/: distansekode
arduino/mega_keyboard_drive/: mega_keyboard_drive.ino
arduino/mega_smoketest/: mega_smoketest.ino
config/: IRL_PJ.xml  Sim_PJ.xml  apriltag_overhead.yaml  camera_params.yaml  ekf.yaml  nav2_params.yaml  overhead_odom.yaml  robot_calibration.yaml  slam_params.yaml  teddy_approach.yaml
docker/: Dockerfile  ros_entrypoint.sh
docs/: lidar_rviz.md
docs/wiki/: arduino-mega.md  build-and-environment.md  calibration.md  hardware.md  index.md  lidar-rviz.md  nav2-ekf.md  pc-tools.md  physical-robot.md  pi-maintenance.md  pi-sparse-checkout.md  ros-interfaces.md  simulation.md  system-overview.md  troubleshooting.md  vision.md
maps/: my_map.pgm  my_map.yaml
models/yolo26n_ncnn_model/: metadata.yaml
scripts/: camera_config_env.py  camera_udp_stream.sh  imu_static_calibrate.py  lidar_smoketest.sh  mega_calibrate.sh  mega_calibration.py  mega_keyboard_gui.py  mega_keyboard_teleop.py  mega_motor_test.py  mega_motor_test.sh  mega_serial_stdin.py  mega_serial_terminal.py  mega_serial_terminal.sh  mega_smoketest.py  mega_smoketest.sh  mega_test.sh  pc_camera_rviz.sh  pc_mega_keyboard.sh  pc_mega_serial_keyboard.sh  pc_teddy_rviz.sh  pi_bringup.sh  pi_sparse_checkout_setup.sh  robot_calibration_env.py  ros_discovery_env.sh  setup_ldlidar_driver.sh  sim_stop.sh  vision_stream.sh  ws_build.sh
src/ldlidar_stl_ros2/launch/: ld06.launch.py
src/mekk4_bringup/: package.xml  setup.py
src/mekk4_bringup/launch/: pc_camera_view.launch.py  vision_stream.launch.py
src/mekk4_bringup/mekk4_bringup/: bno085_node.py  cmd_vel_mux_node.py  imu_static_calibrate.py  lidar_scan_matcher.py  mega_driver_node.py  nav_cmd_vel_flip_node.py  robotarm_safety_node.py  ros_keyboard_teleop.py  teddy_approach_node.py  teddy_grab_node.py  teddy_lidar_markers_node.py  teddy_nav_goal_node.py
src/mekk4_control/: package.xml  setup.py
src/mekk4_hw/: package.xml  setup.py
src/mekk4_perception/: package.xml  setup.py
src/mekk4_perception/mekk4_perception/: overhead_apriltag_odom.py  sim_camera_info_publisher.py  teddy_detector.py  udp_camera_bridge.py
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: lidar_nav2_compat.launch.py  minimal_all.launch.py  nav2_stack.launch.py  pi_robot.launch.py
src/robot_bringup/rviz/: minimal_all.rviz  pre_odom_lidar.rviz  rviz.rviz
src/robot_description/: CMakeLists.txt  package.xml
src/robot_description/urdf/: tracked_robot.urdf  two_wheel_robot.urdf
src/robot_gz/: CMakeLists.txt  package.xml
src/robot_gz/config/: GazeboGUI.config
src/robot_gz/models/apriltag_textures/: model.config  model.sdf
src/robot_gz/models/sim_teddy_bear/: model.sdf
src/robot_gz/models/tracked_robot/: model.sdf
src/robot_gz/worlds/: robot3.sdf  tracked_robot_world.sdf
src/robot_gz/worlds/robot_minimal_control/: package.xml  setup.cfg  setup.py
src/robot_minimal_control/: setup.py
src/robot_minimal_control/robot_minimal_control/: cmd_vel_loop.py  sim_cmd_vel_calibrator.py  sim_keyboard_teleop.py
src/robot_sim_control/: package.xml  setup.cfg  setup.py
src/robot_sim_control/robot_sim_control/: robotarm_gui.py  tracked_cmd_vel_adapter.py
