<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mekk4_hw</name>
  <version>0.0.0</version>
  <description>Hardware interface nodes for the MEKK4 robot.</description>
  <maintainer email="gruppe5pi5@users.noreply.github.com">ubuntu</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
